Fix spacing at the bottom of pages

--- a/src/Styles/About.css
+++ b/src/Styles/About.css
@@ -2,7 +2,7 @@
     width: 70%;
     margin: 0 auto !important;
     float: none !important;
-    padding-bottom: 60px;
+    /* padding-bottom: 60px; */
 }
 
 .About-container {
