--- a/src/Styles/Blog.scss
+++ b/src/Styles/Blog.scss
@@ -2,7 +2,7 @@
     justify-content: center;
     text-align: center;
     width: 100%;
-    padding-bottom: 100px;
+    // padding-bottom: 100px;
 
     .Blog-header {
         font-size: 24px;
