--- a/src/Styles/Books.css
+++ b/src/Styles/Books.css
@@ -1,7 +1,7 @@
 .Books {
   justify-content: center;
   text-align: center;
-  padding-bottom: 80px;
+  /* padding-bottom: 80px; */
 }
 
 .Books-header {
