--- a/src/Styles/Contact.css
+++ b/src/Styles/Contact.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-bottom: 250px;
+    /* padding-bottom: 250px; */
 }
 
 .Contact-header {
